--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
+.nav {
+  height: 70px;
+  border: 1px solid black;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.posts {
+  height: 380px;
+  border: 1px solid grey;
+  width: 400px;
+  border-radius: 10px;
+  background-color: rgb(207, 211, 200);
 }
 
-.App-link {
-  color: #61dafb;
+.post-component {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 3rem;
+  margin: 20px;
+}
+.post-title {
+  font-size: 20px;
+  font-weight: 800;
+  text-align: center;
+  margin-top: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post-body {
+  text-align: center;
+  margin-top: 20px;
+  font-style: italic;
+}
+.post-reactions {
+  display: flex;
+  margin-top: 40px;
+  font-weight: 900;
+  justify-content: center;
 }
